<resources>
    <string name="app_name">GraduatesApp</string>
    <string name="correct_input">Veuillez remplir ce champ</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="addresse_email">Addresse email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte?</string>
    <string name="valider">Valider</string>
    <string name="inscrivez_vous">Inscrivez-vous</string>
    <string name="inscription">Inscription</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="voir_plus">Voir plus</string>
    <string name="secteurs_courants">Secteurs courants</string>
    <string name="licence">Licence</string>
    <string name="master">Master</string>
    <string name="doctorat">Doctorat</string>
    <string name="bio">Bio</string>
    <string name="contact">Contact</string>
    <string name="e_mail">E-mail</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="linkedln">Linkedln</string>
    <string name="non_defini">Non défini</string>
    <string name="details_personnels">Details personnels</string>
    <string name="pseudo">Pseudo</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="confondu">Confondu</string>
    <string name="overview">Overview</string>
    <string name="permission_denied">Permission refusee</string>
    <string name="aucun_dipl_m_disponible">Aucun diplômé disponible</string>
    <string name="welcome_back">Bienvenue %s</string>
</resources>