<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.presentation.auth.AuthActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            android:paddingHorizontal="30dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connexion"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"


                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/addresse_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input"
                android:layout_marginTop="10dp"
                style="@style/InputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/mot_de_passe" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input"
                android:layout_marginTop="10dp"
                style="@style/InputStyle"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/valider"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vous_n_avez_pas_de_compte"
                    android:textColor="@color/black"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/inscrivez_vous"
                    android:textAllCaps="false"
                    android:textColor="@color/blueColor"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>