<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.presentation.home.profile.ProfileFragment">

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:orientation="vertical"
          android:paddingBottom="20dp"
          android:layout_height="match_parent">

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:paddingHorizontal="20dp"
              android:paddingVertical="20dp"
              android:layout_height="wrap_content">

              <ImageButton
                  android:id="@+id/back"
                  android:layout_width="wrap_content"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_baseline_arrow_back_24"
                  android:background="@android:color/transparent"

                  />

              <TextView
                  android:id="@+id/heading"
                  android:text="Profile"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toRightOf="@id/back"
                  android:layout_marginLeft="10dp"
                  android:textColor="@color/black"
                  android:textStyle="bold"
                  android:textSize="17sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="10dp" />


          </androidx.constraintlayout.widget.ConstraintLayout>


          <de.hdodenhof.circleimageview.CircleImageView
              android:id="@+id/avatar"
              android:layout_width="120dp"
              android:layout_height="120dp"
              android:scaleType="centerCrop"
              android:layout_gravity="center"
              android:layout_marginTop="20dp"
              android:src="@drawable/blank" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/details_personnels"
              android:textColor="@color/black"
              android:textStyle="bold"
              android:paddingHorizontal="20dp"
              android:layout_marginTop="60dp"
              android:textSize="18sp"
              />


          <com.google.android.material.card.MaterialCardView
              android:layout_width="match_parent"
              app:cardBackgroundColor="#F9FAFB"
              app:cardCornerRadius="6dp"
              app:cardElevation="0dp"
              android:layout_marginHorizontal="20dp"
              android:layout_marginTop="10dp"
              android:layout_height="wrap_content">
              <androidx.appcompat.widget.LinearLayoutCompat
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:paddingHorizontal="20dp"
                  android:paddingVertical="20dp"
                  android:layout_height="match_parent">

                  <TextView
                      android:id="@+id/text_full_name"
                      android:text="@string/pseudo"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      />

                <TextView
                    android:id="@+id/full_name"
                    tools:text="John doe"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                  
                  <View
                      android:layout_width="match_parent"
                      android:layout_height="1dp"
                      android:layout_marginTop="15dp"
                      android:background="#F2F2F2"

                      />

                  <TextView
                      android:text="E-mail"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      />

                  <TextView
                      android:id="@+id/email"
                      tools:text="john@gmail.com"
                      android:textSize="13sp"
                      android:textStyle="bold"
                      android:textColor="@color/black"
                      android:layout_marginTop="10dp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      />

                  <View
                      android:layout_width="match_parent"
                      android:layout_height="1dp"
                      android:layout_marginTop="15dp"
                      android:background="#F2F2F2"

                      />
                  

              </androidx.appcompat.widget.LinearLayoutCompat>
          </com.google.android.material.card.MaterialCardView>


          <com.google.android.material.button.MaterialButton
              android:id="@+id/logout"
              android:layout_width="match_parent"
              android:layout_height="60dp"
              app:backgroundTint="#F3F4F6"
              android:layout_marginTop="60dp"
              app:elevation="0dp"
              app:cornerRadius="3dp"
              android:textAllCaps="false"
              android:layout_marginHorizontal="20dp"
              android:text="@string/deconnexion"
              android:textColor="@color/black"
              android:textStyle="bold"


              />


      </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>
</layout>