<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.presentation.home.graduates.DescriptionFragment">

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:paddingBottom="30dp"
           android:layout_height="match_parent">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <View
                   android:id="@+id/banner_background"
                   android:background="@android:color/darker_gray"
                   android:layout_width="match_parent"
                   android:layout_height="120dp"
                   app:layout_constraintTop_toTopOf="parent"
                   />

               <ImageView
                   android:id="@+id/banner"
                   android:layout_width="match_parent"
                   android:layout_height="120dp"
                   app:layout_constraintTop_toTopOf="parent"

                   />

               <de.hdodenhof.circleimageview.CircleImageView
                   android:id="@+id/avatar"
                   android:layout_width="120dp"
                   android:layout_height="120dp"
                   android:layout_marginStart="20dp"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   android:src="@drawable/blank"
                   android:layout_marginTop="80dp"
                   android:layout_marginLeft="20dp" />


               <TextView
                   android:id="@+id/username"
                   tools:text="John doe"
                   android:textColor="@color/black"
                   android:textSize="17sp"
                   android:layout_marginTop="10dp"
                   android:textStyle="bold"
                   app:layout_constraintLeft_toLeftOf="@id/avatar"
                   app:layout_constraintTop_toBottomOf="@id/avatar"

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <TextView
                   android:id="@+id/location"
                   tools:text="Cotonou, Akpakpa"
                   app:layout_constraintTop_toBottomOf="@id/username"
                   app:layout_constraintLeft_toLeftOf="@id/username"
                   android:layout_marginTop="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"


                   />


           </androidx.constraintlayout.widget.ConstraintLayout>

           <View
               android:layout_width="match_parent"
               android:layout_height="0.5dp"
               android:background="@android:color/darker_gray"
              android:layout_marginHorizontal="20dp"
               android:layout_marginTop="20dp"

               />


           <TextView
               android:text="@string/bio"
               android:layout_marginStart="20dp"
               android:textSize="17sp"
               android:layout_marginTop="20dp"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp" />

           <TextView
               android:id="@+id/bio"
               tools:text="Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:layout_marginHorizontal="20dp"

               />


           <View
               android:layout_width="match_parent"
               android:layout_height="0.5dp"
               android:background="@android:color/darker_gray"
               android:layout_marginHorizontal="20dp"
               android:layout_marginTop="20dp"

               />


           <TextView
               android:text="@string/contact"
               android:layout_marginStart="20dp"
               android:textSize="17sp"
               android:layout_marginTop="20dp"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/icon_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:src="@drawable/ic_outline_email_24"
                        />

                    <TextView
                        android:id="@+id/title_email"
                        android:text="@string/e_mail"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/icon_email"
                        android:layout_marginLeft="25dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp" />


                    <TextView
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:id="@+id/email"
                        tools:text="johndoe@gmail.com"
                        app:layout_constraintLeft_toLeftOf="@id/title_email"
                        android:textColor="@color/blueColor"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/title_email"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                      />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/email"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintLeft_toLeftOf="@id/email"
                        app:layout_constraintRight_toRightOf="parent"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>


           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:paddingHorizontal="20dp"
               android:paddingVertical="10dp"
               android:layout_height="wrap_content">

               <ImageView
                   android:id="@+id/icon_call"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   android:src="@drawable/ic_outline_phone_24"
                   />

               <TextView
                   android:id="@+id/title_phone"
                   android:text="@string/t_l_phone"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toRightOf="@id/icon_call"
                   android:layout_marginLeft="25dp"
                   android:textColor="@color/black"
                   android:textStyle="bold"
                   android:textSize="14sp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="25dp" />


               <TextView
                   android:id="@+id/phone"
                   tools:text="+22969121212"
                   app:layout_constraintLeft_toLeftOf="@id/title_phone"
                   android:textColor="@color/blueColor"
                   android:textStyle="bold"
                   app:layout_constraintTop_toBottomOf="@id/title_phone"
                   android:layout_marginTop="5dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:clickable="true"
                   android:focusable="true"
                   android:foreground="?android:attr/selectableItemBackground"
                   />

               <View
                   android:layout_width="0dp"
                   android:layout_height="0.5dp"
                   android:layout_marginTop="10dp"
                   app:layout_constraintTop_toBottomOf="@id/phone"
                   android:background="@android:color/darker_gray"
                   app:layout_constraintLeft_toLeftOf="@id/phone"
                   app:layout_constraintRight_toRightOf="parent"
                   />

           </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:paddingHorizontal="20dp"
               android:paddingVertical="10dp"
               android:layout_height="wrap_content">

               <ImageView
                   android:id="@+id/icon_ld"
                   android:layout_width="24dp"
                   android:layout_height="24dp"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   android:src="@drawable/ld"
                   />

               <TextView
                   android:id="@+id/title_ld"
                   android:text="@string/linkedln"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toRightOf="@id/icon_ld"
                   android:layout_marginLeft="25dp"
                   android:textColor="@color/black"
                   android:textStyle="bold"
                   android:textSize="14sp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="25dp" />


               <TextView
                   android:id="@+id/link"
                   tools:text="https://linkedln/john-doe"
                   app:layout_constraintLeft_toLeftOf="@id/title_ld"
                   android:textColor="@color/blueColor"
                   android:textStyle="bold"
                   app:layout_constraintTop_toBottomOf="@id/title_ld"
                   android:layout_marginTop="5dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:clickable="true"
                   android:focusable="true"
                   android:foreground="?android:attr/selectableItemBackground"
                   />

           </androidx.constraintlayout.widget.ConstraintLayout>








       </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>
</layout>